finalizing small app

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <label for="item__input">New Item</label>
       <input type="text" id="item__input" />
       <button type="submit">Add Item</button>
-      <div id="list"></div>
+      <div id="list">
+        
+      </div>
     </form>
   </body>
 </html>
